methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:44: error: not found: value faireV
    faireV();
    ^